Changing a case with adding a language

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ repositories {
     mavenCentral()
 }
 
+compileTestJava {
+    options.encoding = 'UTF-8'
+}
+
 dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter:5.10.1")
     testImplementation("com.codeborne:selenide:6.19.1")
